<resources>
    <string name="app_name">BAC Demo</string>
    <string name="Weight">Weight (lbs)</string>
    <string name="Number">weight</string>
    <string name="WeightInput">Enter weight</string>
    <string name="Gender">Gender</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="setWeight">Set Weight</string>
    <string name="WeightOutput">Weight:</string>
    <string name="alcohol">Alcohol %:</string>
    <string name="drinkSize">Drink Size:</string>
    <string name="oneoz">1 oz</string>
    <string name="twooz">2 oz</string>
    <string name="fiveoz">5 oz</string>
    <string name="twelveoz">12 oz</string>
    <string name="weightGender">Weight and Gender</string>
    <string name="reset">Reset</string>
    <string name="addDrink">Add Drink</string>
    <string name="zero">0</string>
</resources>